
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 JAN 20a
  * in model/metrics/_generic/metrics.c
    - renamed _distance_between_near_bdry_node_and_boundary_plane() to 
      find_distance_between_near_bdry_node_and_boundary_plane()
    - in find_distance_between_near_bdry_node_and_boundary_plane(), returns 
      FALSE should find_unit_vector_normal_to_boundary_plane() is FALSE
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), now only add thermionic emission if
      find_distance_between_near_bdry_node_and_boundary_plane is TRUE
  * in model/share/fluid_share.c
    - in update_w_at_catalytic_wall(), now only updated w if
      find_distance_between_near_bdry_node_and_boundary_plane() is TRUE
    

2025 JAN 17a
  * in lib/gridg/2Dbase.c and lib/gridg/3Dbase.c
    - renamed find_xy_on_ghost_nodes() to find_xy_on_ghost_nodes_mirror()
    - added find_xy_on_ghost_nodes_extrapolate()
  * in lib/gridg/2Dbase.c
    - in GRIDG_read_grid_2D_from_argum() and GRIDG_read_grid_2D_from_file()
      now call find_xy_on_ghost_nodes_extrapolate()
  * in lib/gridg/3Dbase.c
    - in GRIDG_read_grid_3D_from_argum() and GRIDG_read_grid_3D_from_file()
      now call find_xyz_on_ghost_nodes_extrapolate()
      

2024 DEC 12a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - bug fixes


2024 DEC 10a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - various changes 
    

2024 DEC 08a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - various changes
    

2024 NOV 26a
  * in model/transport/_Gupta-Yos/transport.c
    - in find_nuk_eta_kappak_muk() added call to adjust_nuk_using_mobilities_given_muk()
      when TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET is selected
  
