@@ -7,6 +7,15 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2025 JAN 20b
+  * in model/metrics/_generic/metrics.c
+    - in find_distance_between_near_bdry_node_and_boundary_plane(), now uses is_node_bdry_corner()
+      instead of find_unit_vector_normal_to_boundary_plane() to determine whether the distance
+      should be computed or not
+  * in src/common.c
+    - added is_node_bdry_corner()
+
+
 2025 JAN 20a
   * in model/metrics/_generic/metrics.c
     - renamed _distance_between_near_bdry_node_and_boundary_plane() to 
